--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
 
-    <script type="module" src="/build/test.esm.js"></script>
-    <script nomodule src="/build/test.js"></script>
+    <script type="module" src="/build/ui-kit.esm.js"></script>
+    <script nomodule src="/build/ui-kit.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-component id="my-comp" label="Label" name="MyComp" disabled="false"></my-component>
   </body>
+  <script>
+    document.getElementById('my-comp').options = [
+      {
+        value: 'Item 1',
+        displayText: 'Item 1',
+      },
+      {
+        value: 'Item 2',
+        displayText: 'Item 2',
+      },
+      {
+        value: 'Item 3',
+        displayText: 'Item 3',
+      },
+    ];
+  </script>
 </html>
